--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,8 @@ flask==1.1.2
 itsdangerous==1.1.0
 jinja2==2.11.1
 markupsafe==1.1.1
-pillow==11.0.0
+#pillow==7.1.1 doesn't support Python 3.12 and requires zlib development headers
+pillow>=10.0.0
 python-dotenv==0.12.0
 sqlalchemy==1.3.15
 werkzeug==1.0.1
@@ -21,9 +22,12 @@ whoosh==2.7.4
 wtforms==2.2.1
 # dev
 faker==4.0.2
-pathtools==0.1.2
+#pathtools==0.1.2 relies on deprecated imp module  
+pathlib2==2.3.7.post1 #Modern path handling
 python-dateutil==2.8.1
-six==1.14.0
+#six==1.14.0
+six==1.16.0 #python-dateutil>=2.8.1 requires six>=1.5
 text-unidecode==1.3
-watchdog==0.10.2
-
+#watchdog==0.10.2
+watchdog>=2.0.0  # Version 2.0+ doesn't require pathtools
+gunicorn==20.0.4
